k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
      - name: chat-app
        image: docker462/chat-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
