k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-service
spec:
  type: NodePort
  selector:
    app: chat-app
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
